16_subseq/grade.txt
Grading at Fri Jun 19 17:31:09 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:27:1: error: expected declaration or statement at end of input
 }
 ^
maxSeq.c:27:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
